--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
   <nav class="navbar header navbar-default">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
-      <div class="navbar-header col-sm-3 col-md-5 col-lg-6">
+      <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
           <span class="sr-only">Toggle navigation</span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <h2>SHAHZAIB</h2>
+        <a href="#home"><h2>SHAHZAIB</h2></a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-left">
-              <li><a class="" href="#">Home</a></li>
-              <li><a class="" href="#">About</a></li>
-              <li><a class="" href="#">Services</a></li>
-              <li><a class="" href="#">Portfolio</a></li>
-              <li><a class="" href="#">Contact</a></li>
+        <ul class="nav navbar-nav navbar-right">
+              <li><a class="" href="#home">Home</a></li>
+              <li><a class="" href="#About">About</a></li>
+              <li><a class="" href="#Services">Services</a></li>
+              <li><a class="" href="#Portfolio">Portfolio</a></li>
+              <li><a class="" href="#Contact">Contact</a></li>
               <!-- <a class="menu-a btn btn-danger" href="#">Resume</a> -->
         </ul>
-        <a class="menu-a btn btn-danger" href="#">Resume</a>
+        <!-- <a class="menu-a btn btn-danger" href="#">Resume</a> -->
       </div><!-- /.navbar-collapse -->
       <!-- <a class="menu-a btn btn-danger" href="#">Resume</a> -->
     </div><!-- /.container-fluid -->
@@ -65,10 +65,10 @@
         <h1>Hi, I'm <label>Shahzaib Ishtiaq</label></h1>
         <h3>I build things for the web.</h3>
         <!-- <h4>Front end Developer</h4> -->
-        <a class="btn btn-danger" href="#">Get In Touch</a>
+        <a class="btn btn-danger" href="#">Resume</a>
       </div>
       <div class="row-col-2 col-12 col-sm col-md">
-        <img src="./img/down-arrow.svg" alt="">
+        <a href="#About"><img src="./img/down-arrow.svg" alt=""></a>
       </div>
     </div>
   </div>
@@ -91,15 +91,15 @@
   </div>
     <div class="row row-2">
       <div class="container">
-      <div class="row-col-1 col-12 col-sm-6 col-md-5">
+      <div class="row-col-1 col-12 col-sm-5 col-md-5">
         <img src="./img/team/team-1.jpg" alt="">
       </div>
-      <div class="row-col-2 col-12 col-sm-6 col-md-6">
+      <div class="row-col-2 col-12 col-sm-7 col-md-6">
         <h2></h2>
         <p>Hey! my name is Shahzaib Ishtiaq. I'm a Front end developer and passionate about building Mobile-Responsive & User-Friendly Web Applications. I love to Build Web Apps in JavaScript. I'm always eager to learn more in this fast paced industry. I strive to grow as a developer everyday.</p>
         <p>Currently I'm a Second-Year Student at NUML University pursing a degree in Computer Science. I've keen interests in the fields of Technology, Programming and Full Stack Development.</p><br>
         <h4>Skills</h4>
-        <!-- <div class="tech">
+        <div class="tech">
           <ul>
             <a class="btn btn-danger" href="#">JavaScript</a>
             <a class="btn btn-danger" href="#">HTML</a>
@@ -112,7 +112,7 @@
             <a class="btn btn-danger" href="#">Java</a>
             <a class="btn btn-danger" href="#">Git</a>
           </ul>
-        </div> -->
+        </div>
       </div>
       </div>
     </div>
@@ -134,36 +134,42 @@
   </div>
     <div class="row row-2">
       <div class="container">
-        <div class="row-col-1 col-12 col-sm-4 col-md-4">
+        <div class="row-col-1 col-12 col-sm-6 col-md-4">
           <div class="service1">
             <i class="fa fa-mobile"></i>
             <h3>Wordpress Website Creation</h3>
             <p>Mobile Friendly website that can be fit on any device</p>
           </div>
+        </div>
+        <div class="row-col-2 col-12 col-sm-6 col-md-4">
+          <div class="service1">
+            <i class="fa fa-envelope"></i>
+            <h3>Landing Page Design</h3>
+            <p>Mobile Friendly website that can be fit on any device</p>
+          </div>
+        </div>
+        <div class="row-col-3 col-12 col-sm-6 col-md-4">
+          <div class="service1">
+            <i class="fa fa-phone"></i>
+            <h3>E-Commerce Store</h3>
+            <p>Mobile Friendly website that can be fit on any device</p>
+          </div>
+        </div>
+        <div class="row-col-1 col-12 col-sm-6 col-md-4">
           <div class="service1">
             <i class="fa fa-image"></i>
             <h3>Responsive design</h3>
             <p>Mobile Friendly website that can be fit on any device</p>
           </div>
         </div>
-        <div class="row-col-2 col-12 col-sm-4 col-md-4">
-          <div class="service1">
-            <i class="fa fa-envelope"></i>
-            <h3>Landing Page Design</h3>
-            <p>Mobile Friendly website that can be fit on any device</p>
-          </div>
+        <div class="row-col-2 col-12 col-sm-6 col-md-4">
           <div class="service1">
             <i class="fa fa-arrows"></i>
             <h3>Clean Code</h3>
             <p>Mobile Friendly website that can be fit on any device</p>
           </div>
         </div>
-        <div class="row-col-3 col-12 col-sm-4 col-md-4">
-          <div class="service1">
-            <i class="fa fa-phone"></i>
-            <h3>E-Commerce Store</h3>
-            <p>Mobile Friendly website that can be fit on any device</p>
-          </div>
+        <div class="row-col-3 col-12 col-sm-6 col-md-4">
           <div class="service1">
             <i class="fa fa-support"></i>
             <h3>Great Support</h3>
@@ -171,6 +177,7 @@
           </div>
         </div>
     </div>
+  </div>
 </section>
   <!--=========================
   end of Services
@@ -198,22 +205,27 @@
   </div> -->
     <div class="row row-2 tab-content">
       <div id="menu1" class="tab-pane fade in active container">
-        <div class="row-col-1 col-12 col-sm-4 col-md-4">
+        <div class="row-col-1 col-12 col-sm-6 col-md-4">
           <div class="portfolio1">
-            <h1>Tab1</h1>
           </div>
+        </div>
+        <div class="row-col-2 col-12 col-sm-6 col-md-4">
+          <div class="portfolio3">
+          </div>
+        </div>
+        <div class="row-col-3 col-12 col-sm-6 col-md-4">
+          <div class="portfolio5">
+          </div>
+        </div>
+        <div class="row-col-1 col-12 col-sm-6 col-md-4">
           <div class="portfolio2">
           </div>
         </div>
-        <div class="row-col-2 col-12 col-sm-4 col-md-4">
-          <div class="portfolio3">
-          </div>
+        <div class="row-col-2 col-12 col-sm-6 col-md-4">
           <div class="portfolio4">
           </div>
         </div>
-        <div class="row-col-3 col-12 col-sm-4 col-md-4">
-          <div class="portfolio5">
-          </div>
+        <div class="row-col-3 col-12 col-sm-6 col-md-4">
           <div class="portfolio6">
           </div>
         </div>
@@ -301,21 +313,21 @@
   </div>
     <div class="row row-2">
       <div class="container">
-        <div class="row-col-1 col-12 col-sm-5 col-md-6">
+        <div class="row-col-1 col-12 col-sm-6 col-md-6">
           <h1>Have a Project in mind?</h1>
           <h4>Let's Work together! If you've got a project idea or a gig for me, reach out to me below and schedule a call. My inbox is always open. Whether you have a question or just want to say hi, I'll try my best to get back to you!</h4>
-          <a class="btn btn-danger" href="">Let's Talk</a>
+          <a class="btn btn-danger" href="mail.google.com">Let's Talk</a>
         </div>
-        <div class="row-col-2 col-12 col-sm-5 offset-2 col-md-5">
-          <!-- <i class="fa fa-envelope"></i><p>shahzaibishtiaq27@gmail.com</p><br> -->
+        <div class="row-col-2 col-12 col-sm-6 col-md-6">
+          <i class="fa fa-envelope"></i><p>shahzaibishtiaq27@gmail.com</p><br>
           <i class="fa fa-phone"></i>
           <p>923425214801</p>
           <div class="social">
-            <a href=""><i class="fa fa-facebook"></i></a>
-            <a href=""><i class="fa fa-twitter"></i></a>
-            <a href=""><i class="fa fa-instagram"></i></a>
-            <a href=""><i class="fa fa-linkedin"></i></a>
-            <a href=""><i class="fa fa-github"></i></a>
+            <a target="_blank" href="https://facebook.com/shahzaibishtiaq27"><i class="fa fa-facebook"></i></a>
+            <a target="_blank" href="https://twitter.com/shahzaib_27"><i class="fa fa-twitter"></i></a>
+            <a target="_blank" href="https://instagram.com/shahzaib_ishtiaq27"><i class="fa fa-instagram"></i></a>
+            <a target="_blank" href="https://linkedin.com/shahzaibishtiaq"><i class="fa fa-linkedin"></i></a>
+            <a target="_blank" href="https://github.com/shahzaibishtiaq"><i class="fa fa-github"></i></a>
           </div>
         </div>
     </div>
@@ -339,26 +351,6 @@
   <!--=========================
   end of footer
 ===========================---->  
-
-<!-- <script>
-  var a = document.getElementById("showMenu");
-  var b = document.getElementById("menu");
-
-  a.style.display="none";
-  a.style.zIndex="5";
-
-  function menuToggle()
-  {
-    if(a.style.display="none")
-    {
-      a.style.display="initial";
-      // a.style.background="#000";
-    }
-    else{
-      a.style.display="none";
-    }
-  }
-</script> -->
     
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
