--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   start of home
 ===========================---->
 <section id="home">
-  <nav class="navbar header navbar-default">
+  <nav class="navbar navbar-fixed-top header navbar-default">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
@@ -65,7 +65,7 @@
         <h1>Hi, I'm <label>Shahzaib Ishtiaq</label></h1>
         <h3>I build things for the web.</h3>
         <!-- <h4>Front end Developer</h4> -->
-        <a class="btn btn-danger" href="#">Resume</a>
+        <a class="btn btn-danger" href="#Portfolio">Portfolio</a>
       </div>
       <div class="row-col-2 col-12 col-sm col-md">
         <a href="#About"><img src="./img/down-arrow.svg" alt=""></a>
@@ -92,7 +92,7 @@
     <div class="row row-2">
       <div class="container">
       <div class="row-col-1 col-12 col-sm-5 col-md-5">
-        <img src="./img/team/team-1.jpg" alt="">
+        <img src="./img/Shahzaib3.jpg" alt="">
       </div>
       <div class="row-col-2 col-12 col-sm-7 col-md-6">
         <h2></h2>
@@ -136,44 +136,44 @@
       <div class="container">
         <div class="row-col-1 col-12 col-sm-6 col-md-4">
           <div class="service1">
-            <i class="fa fa-mobile"></i>
+            <i class="fa fa-wordpress"></i>
             <h3>Wordpress Website Creation</h3>
-            <p>Mobile Friendly website that can be fit on any device</p>
+            <p>Great (CMS) to manage your blog, store or personal website</p>
           </div>
         </div>
         <div class="row-col-2 col-12 col-sm-6 col-md-4">
           <div class="service1">
-            <i class="fa fa-envelope"></i>
+            <i class="fa fa-desktop"></i>
             <h3>Landing Page Design</h3>
-            <p>Mobile Friendly website that can be fit on any device</p>
+            <p>Home Page for Your Business to capture your audience</p>
           </div>
         </div>
         <div class="row-col-3 col-12 col-sm-6 col-md-4">
           <div class="service1">
-            <i class="fa fa-phone"></i>
+            <i class="fa fa-shopping-cart"></i>
             <h3>E-Commerce Store</h3>
-            <p>Mobile Friendly website that can be fit on any device</p>
+            <p>Build Your online store with woo-commerce functionality</p>
           </div>
         </div>
         <div class="row-col-1 col-12 col-sm-6 col-md-4">
           <div class="service1">
-            <i class="fa fa-image"></i>
+            <i class="fa fa-mobile"></i>
             <h3>Responsive design</h3>
-            <p>Mobile Friendly website that can be fit on any device</p>
+            <p>Mobile Friendly responsive website that can be fit on any device</p>
           </div>
         </div>
         <div class="row-col-2 col-12 col-sm-6 col-md-4">
           <div class="service1">
-            <i class="fa fa-arrows"></i>
-            <h3>Clean Code</h3>
-            <p>Mobile Friendly website that can be fit on any device</p>
+            <i class="fa fa-search"></i>
+            <h3>SEO Friendly Code</h3>
+            <p>Your website will be at the top in the search results</p>
           </div>
         </div>
         <div class="row-col-3 col-12 col-sm-6 col-md-4">
           <div class="service1">
             <i class="fa fa-support"></i>
             <h3>Great Support</h3>
-            <p>Mobile Friendly website that can be fit on any device</p>
+            <p>You can ask anytime for revision or changes in your website</p>
           </div>
         </div>
     </div>
@@ -207,26 +207,62 @@
       <div id="menu1" class="tab-pane fade in active container">
         <div class="row-col-1 col-12 col-sm-6 col-md-4">
           <div class="portfolio1">
+            <div class="overlay">
+              <div class="icons">
+                <a target="_blank" href="https://github.com/shahzaibishtiaq/Simple-Landing-Page"><i class="fa fa-link"></i></a>
+                <a target="_blank" href="https://shahzaibishtiaq.github.io/Simple-Landing-Page"><i class="fa fa-eye"></i></a>
+              </div>
+          </div>
           </div>
         </div>
         <div class="row-col-2 col-12 col-sm-6 col-md-4">
           <div class="portfolio3">
+            <div class="overlay">
+              <div class="icons">
+                <a target="_blank" href="https://github.com/shahzaibishtiaq/restaurant"><i class="fa fa-link"></i></a>
+                <a target="_blank" href="https://shahzaibishtiaq.github.io/restaurant"><i class="fa fa-eye"></i></a>
+              </div>
+          </div>
           </div>
         </div>
         <div class="row-col-3 col-12 col-sm-6 col-md-4">
           <div class="portfolio5">
+            <div class="overlay">
+              <div class="icons">
+                <a target="_blank" href="https://github.com/shahzaibishtiaq/travel-blog"><i class="fa fa-link"></i></a>
+                <a target="_blank" href="https://shahzaibishtiaq.github.io/travel-blog"><i class="fa fa-eye"></i></a>
+              </div>
+          </div>
           </div>
         </div>
         <div class="row-col-1 col-12 col-sm-6 col-md-4">
           <div class="portfolio2">
+            <div class="overlay">
+              <div class="icons">
+                <a target="_blank" href="https://github.com/shahzaibishtiaq/websoft"><i class="fa fa-link"></i></a>
+                <a target="_blank" href="https://shahzaibishtiaq.github.io/websoft"><i class="fa fa-eye"></i></a>
+              </div>
+          </div>
           </div>
         </div>
         <div class="row-col-2 col-12 col-sm-6 col-md-4">
           <div class="portfolio4">
+            <div class="overlay">
+              <div class="icons">
+                <a target="_blank" href="https://github.com/shahzaibishtiaq/blog-design"><i class="fa fa-link"></i></a>
+                <a target="_blank" href="https://shahzaibishtiaq.github.io/blog-design"><i class="fa fa-eye"></i></a>
+              </div>
+          </div>
           </div>
         </div>
         <div class="row-col-3 col-12 col-sm-6 col-md-4">
           <div class="portfolio6">
+            <div class="overlay">
+              <div class="icons">
+                <a target="_blank" href="https://github.com/shahzaibishtiaq/ecommerce-design"><i class="fa fa-link"></i></a>
+                <a target="_blank" href="https://shahzaibishtiaq.github.io/ecommerce-design"><i class="fa fa-eye"></i></a>
+              </div>
+          </div>
           </div>
         </div>
       </div>
@@ -316,7 +352,7 @@
         <div class="row-col-1 col-12 col-sm-6 col-md-6">
           <h1>Have a Project in mind?</h1>
           <h4>Let's Work together! If you've got a project idea or a gig for me, reach out to me below and schedule a call. My inbox is always open. Whether you have a question or just want to say hi, I'll try my best to get back to you!</h4>
-          <a class="btn btn-danger" href="mail.google.com">Let's Talk</a>
+          <a class="btn btn-danger" href="mailto:shahzaibishtiaq27@gmail.com">Let's Talk</a>
         </div>
         <div class="row-col-2 col-12 col-sm-6 col-md-6">
           <i class="fa fa-envelope"></i><p>shahzaibishtiaq27@gmail.com</p><br>
@@ -344,10 +380,11 @@
       <div class="container">
         <div class="row-col-1 col-12 col-sm-12 col-md-12">
           <!-- <span></span> -->
-          <h3>© 2021 Shahzaib Ishtiaq. All Rights Reserved</h3>
+          <h3>Copyright © 2021 Shahzaib Ishtiaq. All Rights Reserved</h3>
         </div>
     </div>
 </section>
+<a class="back-to-top" href="#home"><i class="fa fa-chevron-up"></i></a>
   <!--=========================
   end of footer
 ===========================---->  
