--- a/index.html
+++ b/index.html
@@ -358,9 +358,9 @@
           <p>923425214801</p>
           <div class="social">
             <a target="_blank" href="https://facebook.com/shahzaibishtiaq27"><i class="fa fa-facebook"></i></a>
-            <a target="_blank" href="https://twitter.com/shahzaib_27"><i class="fa fa-twitter"></i></a>
-            <a target="_blank" href="https://instagram.com/shahzaib_ishtiaq27"><i class="fa fa-instagram"></i></a>
-            <a target="_blank" href="https://linkedin.com/shahzaibishtiaq"><i class="fa fa-linkedin"></i></a>
+            <a target="_blank" href="https://twitter.com/shahzaib__js"><i class="fa fa-twitter"></i></a>
+            <a target="_blank" href="https://instagram.com/shahzaib_js"><i class="fa fa-instagram"></i></a>
+            <a target="_blank" href="https://linkedin.com/in/shahzaibishtiaq"><i class="fa fa-linkedin"></i></a>
             <a target="_blank" href="https://github.com/shahzaibishtiaq"><i class="fa fa-github"></i></a>
           </div>
         </div>
